refactor: site-container update
refactors the site-container to use css flexbox layout vs. the current method which uses fixed position elements and margins to offset the main content.

--- a/src/app/core/site-container/site-container.component.html
+++ b/src/app/core/site-container/site-container.component.html
@@ -10,16 +10,11 @@
 </header>
 
 <!-- Site content -->
-<section
-	[ngClass]="{
-		'header-active footer-active': bannerHtml,
-		'copyright-active': copyrightHtml
-	}"
->
+<section class="site-body">
 	<site-navbar>
-		<section class="site-content" id="app-content" tabindex="-1">
+		<main class="site-content h-100 overflow-auto" id="app-content" tabindex="-1">
 			<ng-content></ng-content>
-		</section>
+		</main>
 	</site-navbar>
 </section>
 
