--- a/src/app/core/site-navbar/site-navbar.component.scss
+++ b/src/app/core/site-navbar/site-navbar.component.scss
@@ -3,23 +3,9 @@
 @import '../site-container/shared';
 @import './shared';
 
-// -------------------------------------------------
-// Navbar offsets given the header/footer setup
-// -------------------------------------------------
-:host-context(.header-active) .navbar-left {
-	top: $header-banner-height;
-}
-
-:host-context(.copyright-active) .navbar-left {
-	bottom: $footer-banner-height;
-}
-
-:host-context(.footer-active) .navbar-left {
-	bottom: $footer-banner-height;
-}
-
-:host-context(.copyright-active.footer-active) .navbar-left {
-	bottom: $footer-banner-height + $copyright-banner-height;
+:host {
+	display: flex;
+	height: 100%;
 }
 
 // -------------------------------------------------
@@ -27,19 +13,24 @@
 // A left-docked vertical navigation bar
 // -------------------------------------------------
 .navbar-left {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	flex-shrink: 0;
 	background-color: $nav-background-color;
-	padding: 0;
 	overflow-x: hidden;
 
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	top: 0;
-
 	width: $nav-closed-width;
-	z-index: 10000;
+	z-index: $nav-z-index;
 
 	transition: width 0.15s ease-in-out;
+
+	// Main nav: The top area where the site logo exists
+	.nav-logo {
+		background-color: $nav-element-logo-color-bg;
+		flex-shrink: 0;
+		width: 100%;
+	}
 
 	// A normal element
 	.element {
@@ -99,6 +90,7 @@
 
 	// The element that contains the logo
 	.element-logo {
+		margin: 0;
 		padding: 0;
 
 		> a {
@@ -121,6 +113,11 @@
 	}
 
 	.nav-inner-scroll {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: space-between;
+		flex-grow: 1;
 		overflow-y: auto;
 		overflow-x: hidden;
 		width: $nav-closed-width;
@@ -151,37 +148,23 @@
 			width: $nav-open-width;
 		}
 	}
-
-	// Main nav: The top area where the site logo exists
-	.nav-logo {
-		background-color: $nav-element-logo-color-bg;
-		width: 100%;
-
-		.element-logo {
-			margin: 0;
-		}
-	}
 }
 
-// Offset the content by the width of the navbar
 .navbar-content {
-	margin-left: $nav-closed-width;
-	transition: margin-left 0.15s ease-in-out;
-
-	&.navbar-open {
-		margin-left: $nav-open-width;
-	}
+	flex-grow: 1;
+	flex-shrink: 1;
+	overflow: auto;
 }
 
 ::ng-deep .popover.site-nav-popover-container {
-	width: 192px;
-	z-index: 10001;
+	width: $nav-popover-width;
+	z-index: $nav-popover-z-index;
 }
 
 ::ng-deep .popover.site-nav-popover-container-messages {
-	width: 298px;
-	max-width: 298px;
-	z-index: 10001;
+	width: $nav-messages-popover-width;
+	max-width: $nav-messages-popover-width;
+	z-index: $nav-popover-z-index;
 
 	.popover-menu {
 		li {
