--- a/src/app/core/site-navbar/_shared.scss
+++ b/src/app/core/site-navbar/_shared.scss
@@ -28,5 +28,11 @@ $nav-element-logo-hover-color-bg: $ux-color-primary-medium !default;
 $nav-element-logo-img-margin: 4px !default;
 $nav-element-logo-img-height: 50px !default;
 
+$nav-z-index: 10000 !default;
+$nav-popover-z-index: $nav-z-index + 1 !default;
+
+$nav-popover-width: 192px !default;
+$nav-messages-popover-width: 298px !default;
+
 // Calculated
 $nav-element-icon-margin-left: ($nav-closed-width - $nav-element-icon-width) / 2;
