--- a/src/app/core/help/getting-started/getting-started-help.component.html
+++ b/src/app/core/help/getting-started/getting-started-help.component.html
@@ -34,7 +34,7 @@
 	</p>
 </div>
 
-<div *ngIf="externalLinksEnabled">
+<div *ngIf="externalLinks.length > 0">
 	<h2>External Resources</h2>
-	<external-links></external-links>
+	<external-links [links]="externalLinks"></external-links>
 </div>
