feat: AuthorizationDirective updates * Add `AbstractIfThenElseDirective` to reduce boilerplate code for structural directives * Break up `AuthorizationDirective` into multiple specific directives * Add support for `and/or`ing directive with addition condition

--- a/src/app/core/site-container/site-container.component.html
+++ b/src/app/core/site-container/site-container.component.html
@@ -27,6 +27,4 @@
 	</div>
 </footer>
 
-<ng-container *isAuthenticated>
-	<app-feedback-flyout *ngIf="showFeedbackFlyout"></app-feedback-flyout>
-</ng-container>
+<app-feedback-flyout *isAuthenticated="true; and: showFeedbackFlyout"></app-feedback-flyout>
