refactor: add rxjs eslint rules and fixes

--- a/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
+++ b/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
@@ -110,7 +110,7 @@
 						class="form-control input-sm"
 						placeholder="Search..."
 						[(ngModel)]="queryUserSearchTerm"
-						[typeahead]="searchUsersRef"
+						[typeahead]="searchUsers$"
 						[typeaheadOptionField]="'displayName'"
 						[typeaheadMinLength]="1"
 						[typeaheadWaitMs]="300"
