fix: misc team fixes * default implicitMembers to false when creating new team * update required roles on auth guard for create team page * set default filter for getTeams method * fix invalid date format on view teams page * move creation date from header to details card * remove titlecase pipe from description * preserve new lines in rendering of description * fix positioning of sticky inline edit buttons, make configurable via scss variables

--- a/src/app/core/teams/list-teams/list-teams.component.html
+++ b/src/app/core/teams/list-teams/list-teams.component.html
@@ -57,7 +57,7 @@
 					<div>{{ team.created | agoDate }}</div>
 				</td>
 				<td>
-					<div>{{ team.description }}</div>
+					<div style="white-space: pre-wrap">{{ team.description }}</div>
 				</td>
 			</ng-template>
 
