--- a/src/app/core/site-navbar/site-navbar.component.scss
+++ b/src/app/core/site-navbar/site-navbar.component.scss
@@ -163,8 +163,12 @@
 
 ::ng-deep .popover.site-nav-popover-container-messages {
 	width: $nav-messages-popover-width;
-	max-width: $nav-messages-popover-width;
+	max-width: 50%;
+	height: $nav-messages-popover-height;
 	z-index: $nav-popover-z-index;
+	overflow-y: auto;
+	position: fixed !important;
+	transform: translate3d(7%, 250%, 0px) !important;
 
 	.popover-menu {
 		li {
@@ -173,7 +177,6 @@
 					background-color: unset;
 				}
 				padding: 12px 18px;
-				max-height: 550px;
 				overflow: auto;
 			}
 		}
