--- a/src/app/core/admin/user-management/manage-user.component.html
+++ b/src/app/core/admin/user-management/manage-user.component.html
@@ -233,11 +233,7 @@
 				>
 					Cancel
 				</button>
-				<button
-					type="submit"
-					class="btn btn-primary"
-					[disabled]="okDisabled || !form.form.valid"
-				>
+				<button type="submit" class="btn btn-primary" [disabled]="!form.form.valid">
 					{{ okButtonText }}
 				</button>
 				<button
