--- a/src/app/core/admin/messages/manage-message.component.html
+++ b/src/app/core/admin/messages/manage-message.component.html
@@ -13,6 +13,7 @@
 
 	<form
 		*ngIf="message"
+		#form="ngForm"
 		autocomplete="off"
 		class="pt-3"
 		role="form"
@@ -77,7 +78,7 @@
 				>
 					Preview
 				</button>
-				<button type="submit" class="btn btn-primary" [disabled]="okDisabled">
+				<button type="submit" class="btn btn-primary" [disabled]="!form.form.valid">
 					{{ okButtonText }}
 				</button>
 			</div>
