--- a/src/app/core/site-navbar/site-navbar.component.scss
+++ b/src/app/core/site-navbar/site-navbar.component.scss
@@ -162,25 +162,8 @@
 }
 
 ::ng-deep .popover.site-nav-popover-container-messages {
-	width: $nav-messages-popover-width;
-	max-width: 50%;
-	height: $nav-messages-popover-height;
+	max-width: min(calc(100vw - #{$nav-open-width} - 1rem), #{$nav-messages-popover-max-width});
 	z-index: $nav-popover-z-index;
-	overflow-y: auto;
-	position: fixed !important;
-	transform: translate3d(7%, 250%, 0px) !important;
-
-	.popover-menu {
-		li {
-			a {
-				&:hover {
-					background-color: unset;
-				}
-				padding: 12px 18px;
-				overflow: auto;
-			}
-		}
-	}
 }
 
 // new messages number badge
