--- a/src/app/core/messages/recent-messages/recent-messages.component.scss
+++ b/src/app/core/messages/recent-messages/recent-messages.component.scss
@@ -1,13 +1,29 @@
+@import '../../../../styles/ngx-bootstrap/shared';
 @import '../../../../styles/shared';
+@import '../../site-navbar/shared';
 @import '../shared';
 
-$card-width: 258px;
-$card-icon-width: 31px;
+$recent-message-preview-lint-count: 3 !default;
+
+:host {
+	display: flex;
+	flex-direction: column;
+	gap: map-get($spacers, 3);
+	padding: map-get($spacers, 3);
+}
+
+.cards {
+	display: flex;
+	flex-direction: column;
+	gap: map-get($spacers, 3);
+	padding: 2px;
+	overflow: auto;
+	min-height: 120px;
+	max-height: min(calc(100vh - 280px), #{$nav-messages-popover-max-height});
+}
 
 .card-message {
 	@include card-message();
-
-	width: $card-width;
 
 	.card-body {
 		padding: 0.75rem;
@@ -17,5 +33,12 @@ $card-icon-width: 31px;
 			padding: 0;
 			text-decoration: underline;
 		}
+	}
+
+	.line-clamp {
+		display: -webkit-box;
+		-webkit-line-clamp: $recent-message-preview-lint-count;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
 	}
 }
