--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -36,10 +36,16 @@
 					<div>{{ member.userModel.username }}</div>
 				</td>
 			</ng-container>
-			<ng-container cdkColumnDef="status">
-				<th cdk-header-cell *cdkHeaderCellDef>Account Status</th>
-				<td cdk-cell *cdkCellDef="let member">
-					<div>{{ member.active ? 'Active' : 'Not Active' }}</div>
+			<ng-container cdkColumnDef="lastLogin">
+				<th cdk-header-cell asy-sort-header *cdkHeaderCellDef>Last Login</th>
+				<td cdk-cell *cdkCellDef="let user">
+					<div
+						class="hide-overflow"
+						tooltip="{{ user.userModel.lastLogin | utcDate }}"
+						container="body"
+					>
+						{{ user.userModel.lastLogin | agoDate: false }}
+					</div>
 				</td>
 			</ng-container>
 			<ng-container cdkColumnDef="explicit">
