Filter for explicit vs implicit team members

--- a/src/app/core/teams/list-team-members/list-team-members.component.html
+++ b/src/app/core/teams/list-team-members/list-team-members.component.html
@@ -51,6 +51,8 @@
 			<ng-container cdkColumnDef="explicit">
 				<th cdk-header-cell *cdkHeaderCellDef>
 					Type
+					<asy-header-filter list-filter [options]="typeFilterOptions">
+					</asy-header-filter>
 				</th>
 
 				<td cdk-cell *cdkCellDef="let member">
