--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -78,7 +78,14 @@
 					(onShown)="userNavOpen = true"
 					(onHidden)="userNavOpen = false"
 				>
-					<span class="fa fa-fw fa-user-circle"></span>
+					<span class="fa fa-fw fa-user-circle" *ngIf="!isMasquerade"></span>
+					<span class="fa-stack" *ngIf="isMasquerade">
+						<span class="fa fa-circle fa-stack-2x"></span>
+						<span
+							class="fa fa-lg fa-user-secret fa-stack-1x text-primary"
+							style="margin-left: 1px"
+						></span>
+					</span>
 					<span [hidden]="!navbarOpen">{{ session?.name }}</span>
 				</a>
 
@@ -93,8 +100,46 @@
 								User Preferences
 							</a>
 						</li>
+
+						<ng-container *ngIf="masqueradeEnabled">
+							<li>
+								<a
+									routerLink="/masquerade"
+									(click)="userNavPopover.hide()"
+									*ngIf="!isMasquerade && canMasquerade"
+									>Masquerade</a
+								>
+								<a routerLink="/masquerade" *ngIf="isMasquerade"
+									>Clear Masquerade</a
+								>
+							</li>
+						</ng-container>
 					</ul>
 				</ng-template>
+			</li>
+
+			<li
+				class="element"
+				*ngIf="masqueradeEnabled && isMasquerade && (this.session?.name ?? null) === null"
+			>
+				<a
+					tooltip="Clear Masquerade"
+					placement="left"
+					container="body"
+					[isDisabled]="navbarOpen"
+					routerLinkActive="active-link"
+					routerLink="masquerade"
+				>
+					<span class="fa-stack">
+						<span class="fa fa-circle fa-stack-2x"></span>
+						<span
+							class="fa fa-lg fa-user-secret fa-stack-1x text-primary"
+							style="margin-left: 1px"
+						></span>
+						<span class="fa fa-ban fa-stack-2x text-danger"></span>
+					</span>
+					<span [hidden]="!navbarOpen">Clear Masquerade</span>{{ this.session?.name }}
+				</a>
 			</li>
 
 			<!-- Auditor Nav	-->
