style: Cleanup table column styles
Cleans up column styles on various tables.
  * apply styling directly to `td`s where appropriate and remove unnecessary divs
  * replace uses of `hide-overflow` with  `text-nowrap` where appropriate
  * apply `text-nowrap` to all `th`s by default`
  * favor use of `cdk-column-*` classes over inline styles

--- a/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
+++ b/src/app/common/table/sort/asy-sort-header/asy-sort-header.component.html
@@ -1,4 +1,4 @@
-<div class="hide-overflow" tabindex="0" role="button">
+<div class="text-nowrap" tabindex="0" role="button">
 	<ng-content></ng-content>
 
 	<span class="fa-stack" *ngIf="sortable">
