--- a/src/app/core/admin/user-management/list-users/admin-list-users.component.scss
+++ b/src/app/core/admin/user-management/list-users/admin-list-users.component.scss
@@ -5,3 +5,12 @@
 	flex-direction: column;
 	height: 100%;
 }
+
+.cdk-column-externalRoles,
+.cdk-column-externalGroups {
+	max-width: 200px;
+}
+
+.user-role-external::after {
+	content: '(external)';
+}
