--- a/src/app/core/teams/list-teams/list-teams.component.html
+++ b/src/app/core/teams/list-teams/list-teams.component.html
@@ -39,19 +39,17 @@
 		<table cdk-table [dataSource]="dataSource" asySort asyFilter class="table table-striped">
 			<ng-container cdkColumnDef="name">
 				<th cdk-header-cell asy-sort-header *cdkHeaderCellDef>Name</th>
-				<td cdk-cell *cdkCellDef="let team">
-					<div class="hide-overflow">
-						<a class="text-decoration-underline" [routerLink]="['/team', team._id]">{{
-							team.name
-						}}</a>
-					</div>
+				<td cdk-cell *cdkCellDef="let team" class="text-nowrap">
+					<a class="text-decoration-underline" [routerLink]="['/team', team._id]">{{
+						team.name
+					}}</a>
 				</td>
 			</ng-container>
 			<ng-container cdkColumnDef="created">
 				<th cdk-header-cell asy-sort-header *cdkHeaderCellDef>Created</th>
 				<td cdk-cell *cdkCellDef="let team">
 					<div
-						class="hide-overflow"
+						class="text-nowrap"
 						tooltip="{{ team.created | utcDate }}"
 						container="body"
 					>
@@ -62,9 +60,7 @@
 			<ng-container cdkColumnDef="description">
 				<th cdk-header-cell asy-sort-header *cdkHeaderCellDef>Description</th>
 				<td cdk-cell *cdkCellDef="let team">
-					<div class="hide-overflow" style="white-space: pre-wrap">
-						{{ team.description }}
-					</div>
+					{{ team.description }}
 				</td>
 			</ng-container>
 			<tr cdk-header-row *cdkHeaderRowDef="displayedColumns; sticky: true"></tr>
