--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -34,33 +34,70 @@
 
 		<!-- Bottom Aux Nav -->
 		<ul class="nav nav-aux">
-			<!-- Team Nav   -->
-			<li class="element nav-popover nav-popover-bottom" *hasRole="'user'">
+			<!-- Admin Nav	-->
+			<li class="element nav-popover nav-popover-bottom" *hasRole="'admin'">
 				<a
-					[class.highlight-link]="teamNavOpen"
-					[popover]="teamNav"
+					[class.highlight-link]="adminNavOpen"
+					[popover]="adminNav"
 					container="body"
 					containerClass="site-nav-popover-container"
-					tooltip="Teams"
+					tooltip="Admin"
 					[isDisabled]="navbarOpen"
-					#teamNavPopover="bs-popover"
+					#adminNavPopover="bs-popover"
 					placement="left"
 					[outsideClick]="true"
-					(onShown)="teamNavOpen = true"
-					(onHidden)="teamNavOpen = false"
+					(onShown)="adminNavOpen = true"
+					(onHidden)="adminNavOpen = false"
+				>
+					<span class="fa fa-fw fa-cog"></span>
+					<span [hidden]="!navbarOpen">Admin</span>
+				</a>
+
+				<ng-template #adminNav>
+					<ul class="popover-menu" role="menu">
+						<li *ngFor="let adminItem of adminMenuItems">
+							<a
+								[routerLink]="[
+									'admin/' + adminItem.path,
+									{ clearCachedFilter: true }
+								]"
+								(click)="adminNavPopover.hide()"
+							>
+								{{ adminItem.title }}
+							</a>
+						</li>
+					</ul>
+				</ng-template>
+			</li>
+
+			<!-- Auditor Nav	-->
+			<li class="element" *hasRole="'auditor'">
+				<a
+					tooltip="Audit Logs"
+					placement="left"
+					container="body"
+					[isDisabled]="navbarOpen"
+					routerLinkActive="active-link"
+					routerLink="/audit"
+				>
+					<span class="fa fa-fw fa-file-text-o"></span>
+					<span [hidden]="!navbarOpen">Audit Logs</span>
+				</a>
+			</li>
+
+			<!-- Team Nav   -->
+			<li class="element" *hasRole="'user'">
+				<a
+					tooltip="Teams"
+					placement="left"
+					container="body"
+					[isDisabled]="navbarOpen"
+					routerLinkActive="active-link"
+					routerLink="/teams"
 				>
 					<span class="fa fa-fw fa-users"></span>
 					<span [hidden]="!navbarOpen">Teams</span>
 				</a>
-
-				<ng-template #teamNav>
-					<ul class="popover-menu" role="menu">
-						<!-- List Teams -->
-						<li>
-							<a routerLink="/teams" (click)="teamNavPopover.hide()">View All</a>
-						</li>
-					</ul>
-				</ng-template>
 			</li>
 
 			<!-- User Nav	-->
@@ -140,70 +177,6 @@
 					</span>
 					<span [hidden]="!navbarOpen">Clear Masquerade</span>{{ this.session?.name }}
 				</a>
-			</li>
-
-			<!-- Auditor Nav	-->
-			<li class="element nav-popover nav-popover-bottom" *hasRole="'auditor'">
-				<a
-					[class.highlight-link]="auditorNavOpen"
-					[popover]="auditorNav"
-					container="body"
-					containerClass="site-nav-popover-container"
-					tooltip="Audit Logs"
-					[isDisabled]="navbarOpen"
-					#auditorNavPopover="bs-popover"
-					placement="left"
-					[outsideClick]="true"
-					(onShown)="auditorNavOpen = true"
-					(onHidden)="auditorNavOpen = false"
-				>
-					<span class="fa fa-fw fa-file-text-o"></span>
-					<span [hidden]="!navbarOpen">Audit Logs</span>
-				</a>
-
-				<ng-template #auditorNav>
-					<ul class="popover-menu" role="menu">
-						<li>
-							<a routerLink="/audit" (click)="auditorNavPopover.hide()">View All</a>
-						</li>
-					</ul>
-				</ng-template>
-			</li>
-
-			<!-- Admin Nav	-->
-			<li class="element nav-popover nav-popover-bottom" *hasRole="'admin'">
-				<a
-					[class.highlight-link]="adminNavOpen"
-					[popover]="adminNav"
-					container="body"
-					containerClass="site-nav-popover-container"
-					tooltip="Admin"
-					[isDisabled]="navbarOpen"
-					#adminNavPopover="bs-popover"
-					placement="left"
-					[outsideClick]="true"
-					(onShown)="adminNavOpen = true"
-					(onHidden)="adminNavOpen = false"
-				>
-					<span class="fa fa-fw fa-cog"></span>
-					<span [hidden]="!navbarOpen">Admin</span>
-				</a>
-
-				<ng-template #adminNav>
-					<ul class="popover-menu" role="menu">
-						<li *ngFor="let adminItem of adminMenuItems">
-							<a
-								[routerLink]="[
-									'admin/' + adminItem.path,
-									{ clearCachedFilter: true }
-								]"
-								(click)="adminNavPopover.hide()"
-							>
-								{{ adminItem.title }}
-							</a>
-						</li>
-					</ul>
-				</ng-template>
 			</li>
 
 			<!-- Messages Nav   -->
