--- a/src/app/core/admin/messages/list-messages/list-messages.component.html
+++ b/src/app/core/admin/messages/list-messages/list-messages.component.html
@@ -59,7 +59,7 @@
 					{{ message.updated | utcDate }}
 				</td>
 			</ng-container>
-			<ng-container cdkColumnDef="actionsMenu">
+			<ng-container cdkColumnDef="actionsMenu" stickyEnd>
 				<th cdk-header-cell *cdkHeaderCellDef></th>
 				<td cdk-cell *cdkCellDef="let message">
 					<span class="dropdown border-left pl-2 py-1" container="body" dropdown>
