--- a/src/app/core/admin/user-management/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/list-users/admin-list-users.component.html
@@ -160,7 +160,7 @@
 						</ng-container>
 					</td>
 				</ng-container>
-				<ng-container cdkColumnDef="actionsMenu">
+				<ng-container cdkColumnDef="actionsMenu" stickyEnd>
 					<th cdk-header-cell *cdkHeaderCellDef></th>
 					<td cdk-cell *cdkCellDef="let user">
 						<span class="dropdown border-left pl-2 py-1" container="body" dropdown>
