--- a/src/app/common/table/paginator/paginator.component.html
+++ b/src/app/common/table/paginator/paginator.component.html
@@ -1,57 +1,68 @@
-<ng-container *ngIf="dataSource.pagingResults$ | async as page; else invalidPage">
-	<span class="pager-controls">
-		<!-- Count message -->
-		<span class="pager-status">
-			{{ start | number: '1.0-0' }} - {{ end | number: '1.0-0' }} of
-			{{ page.totalSize | number: '1.0-0' }}
-		</span>
-
-		<!-- Paging controls -->
-		<button
-			type="button"
-			class="btn btn-link"
-			[hidden]="page.totalPages <= 1 || page.pageNumber - 1 < 0"
-			(click)="goToPage(0)"
+<span *ngIf="dataSource.pagingResults$ | async as page; else invalidPage">
+	<span class="page-size mr-4">
+		<span>Items per page:</span>
+		<ng-select
+			class="d-inline-block ml-2"
+			[items]="pageSizeOptions"
+			[clearable]="false"
+			[searchable]="false"
+			[ngModel]="page.pageSize"
+			(change)="setPageSize($event)"
 		>
-			<span class="fa fa-angle-double-left"></span>
-		</button>
-
-		<button
-			type="button"
-			class="btn btn-link"
-			[hidden]="page.totalPages <= 1 || page.pageNumber - 1 < 0"
-			(click)="goToPage(page.pageNumber - 1)"
-		>
-			<span class="fa fa-angle-left"></span>
-		</button>
-
-		<button
-			type="button"
-			class="btn btn-link"
-			[hidden]="
-				page.totalPages <= 1 ||
-				page.pageNumber + 1 >= page.totalPages ||
-				page.elements.length !== page.pageSize
-			"
-			(click)="goToPage(page.pageNumber + 1)"
-		>
-			<span class="fa fa-angle-right"></span>
-		</button>
-
-		<button
-			type="button"
-			class="btn btn-link"
-			[hidden]="
-				page.totalPages <= 1 ||
-				page.pageNumber + 1 >= page.totalPages ||
-				page.elements.length !== page.pageSize
-			"
-			(click)="goToPage(page.totalPages - 1)"
-			*ngIf="!disableGoToEnd"
-		>
-			<span class="fa fa-angle-double-right"></span>
-		</button>
+		</ng-select>
 	</span>
-</ng-container>
+
+	<!-- Count message -->
+	<span class="pager-status">
+		{{ start | number: '1.0-0' }} - {{ end | number: '1.0-0' }} of
+		{{ page.totalSize | number: '1.0-0' }}
+	</span>
+
+	<!-- Paging controls -->
+	<button
+		type="button"
+		class="btn btn-link"
+		[disabled]="page.totalPages <= 1 || page.pageNumber - 1 < 0"
+		(click)="goToPage(0)"
+	>
+		<span class="fa fa-lg fa-angle-double-left"></span>
+	</button>
+
+	<button
+		type="button"
+		class="btn btn-link"
+		[disabled]="page.totalPages <= 1 || page.pageNumber - 1 < 0"
+		(click)="goToPage(page.pageNumber - 1)"
+	>
+		<span class="fa fa-lg fa-angle-left"></span>
+	</button>
+
+	<button
+		type="button"
+		class="btn btn-link"
+		[disabled]="
+			page.totalPages <= 1 ||
+			page.pageNumber + 1 >= page.totalPages ||
+			page.elements.length !== page.pageSize
+		"
+		(click)="goToPage(page.pageNumber + 1)"
+	>
+		<span class="fa fa-lg fa-angle-right"></span>
+	</button>
+
+	<button
+		type="button"
+		class="btn btn-link"
+		[disabled]="
+			page.totalPages <= 1 ||
+			page.pageNumber + 1 >= page.totalPages ||
+			page.elements.length !== page.pageSize
+		"
+		(click)="goToPage(page.totalPages - 1)"
+		*ngIf="!disableGoToEnd"
+	>
+		<span class="fa fa-lg fa-angle-double-right"></span>
+	</button>
+</span>
 
 <ng-template #invalidPage>0 - 0 of 0</ng-template>
