--- a/src/app/core/admin/cache-entries/cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/cache-entries.component.html
@@ -45,7 +45,7 @@
 					</div>
 				</td>
 			</ng-container>
-			<ng-container cdkColumnDef="actionsMenu">
+			<ng-container cdkColumnDef="actionsMenu" stickyEnd>
 				<th cdk-header-cell *cdkHeaderCellDef></th>
 				<td cdk-cell *cdkCellDef="let entry">
 					<span class="dropdown border-left pl-2 py-1" container="body" dropdown>
