--- a/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
+++ b/src/app/core/admin/end-user-agreement/list-euas/admin-list-euas.component.html
@@ -83,7 +83,7 @@
 						{{ eua.euaModel.updated | utcDate }}
 					</td>
 				</ng-container>
-				<ng-container cdkColumnDef="actionsMenu">
+				<ng-container cdkColumnDef="actionsMenu" stickyEnd>
 					<th cdk-header-cell *cdkHeaderCellDef></th>
 					<td cdk-cell *cdkCellDef="let eua">
 						<span class="dropdown border-left pl-2 py-1" container="body" dropdown>
