feat: sticky support for expander and selection columns
Adds support for setting expander and selection columns to be sticky.

--- a/src/app/common/table/expander/asy-expander-column.component.html
+++ b/src/app/common/table/expander/asy-expander-column.component.html
@@ -1,4 +1,4 @@
-<ng-container cdkColumnDef>
+<ng-container cdkColumnDef [sticky]="_sticky" [stickyEnd]="_stickyEnd">
 	<th cdk-header-cell *cdkHeaderCellDef style="width: 42px"></th>
 	<td cdk-cell *cdkCellDef="let item; let index = index">
 		<div
