#264 Resolving SCSS lint issues during production build. Removing several unused dependencies. Removing protractor reference from README since e2e is no longer supported

--- a/src/app/common/admin/admin.component.scss
+++ b/src/app/common/admin/admin.component.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import '../../core/site-container/shared';
 
 $admin-section-padding-y: $site-content-padding-y;
@@ -9,6 +10,6 @@ $admin-section-padding-y: $site-content-padding-y;
 
 	.admin-section-container {
 		height: 100%;
-		padding: $admin-section-padding-y / 2 0;
+		padding: math.div($admin-section-padding-y, 2) 0;
 	}
 }
