--- a/src/styles/ngx-bootstrap/_cards.scss
+++ b/src/styles/ngx-bootstrap/_cards.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import 'shared';
 
 $card-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3) !default;
@@ -29,17 +30,17 @@ $card-selected-check-size: 2rem !default;
 
 	&.selected {
 		&:before {
-			font: normal normal normal $card-selected-check-size/2 FontAwesome; /* stylelint-disable-line */
+			font: normal normal normal math.div($card-selected-check-size, 2) FontAwesome; /* stylelint-disable-line */
 			color: $ux-color-white;
 			content: '\f00c';
 			position: absolute;
-			left: $card-selected-check-size / -2;
-			top: $card-selected-check-size / -2;
+			left: math.div($card-selected-check-size, -2);
+			top: math.div($card-selected-check-size, -2);
 			width: $card-selected-check-size;
 			height: $card-selected-check-size;
 			border-radius: 100%;
 			background: $ux-color-highlight;
-			padding-top: $card-selected-check-size / 4;
+			padding-top: math.div($card-selected-check-size, 4);
 			box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.4);
 		}
 	}
