--- a/src/styles/ngx-bootstrap/_grid.scss
+++ b/src/styles/ngx-bootstrap/_grid.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @import 'shared';
 
 // Modified copy of make-grid-columns from Bootstrap (node_modules/bootstrap/scss/mixins/_grid-framework.scss).
@@ -11,8 +12,8 @@
 	%na-grid-column {
 		position: relative;
 		width: 100%;
-		padding-right: $gutter / 2;
-		padding-left: $gutter / 2;
+		padding-right: math.div($gutter, 2);
+		padding-left: math.div($gutter, 2);
 	}
 
 	@each $breakpoint in map-keys($breakpoints) {
