--- a/src/app/site/example/forms/forms.component.html
+++ b/src/app/site/example/forms/forms.component.html
@@ -189,7 +189,7 @@
 		</div>
 	</div>
 
-	<h3 class="pt-3">Without labels</h3>
+	<h3 class="pt-3">Without labels (will use default browser style)</h3>
 	<div class="form-check">
 		<input
 			class="form-check-input position-static"
@@ -210,7 +210,17 @@
 		/>
 	</div>
 
-	<h2 class="pt-4">Buttons</h2>
+	<h3 class="pt-3">Slide Toggle Checkboxes</h3>
+	<div class="form-check">
+		<input type="checkbox" class="form-check-input slide-toggle" id="slideToggle1" />
+		<label class="form-check-label" for="slideToggle1">Toggle this switch element</label>
+	</div>
+	<div class="form-check">
+		<input type="checkbox" class="form-check-input slide-toggle" disabled id="slideToggle2" />
+		<label class="form-check-label" for="slideToggle2">Disabled switch element</label>
+	</div>
+
+	<h2 class="pt-3">Buttons</h2>
 
 	<h3 class="pt-3">Standard</h3>
 	<button type="button" class="mr-3 btn btn-primary">Primary</button>
